<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_txtView_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_main_txtView_credit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_main_img_info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/activity_main_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/activity_main_textView_title"
        android:textColor="#E85020"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_img_info" />

    <TextView
        android:id="@+id/activity_main_txtView_currentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_main_txtView_currentPlayer"
        app:layout_constraintStart_toStartOf="@+id/activity_main_textView_title"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_textView_title" />

    <TextView
        android:id="@+id/activity_main_txtView_xo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activity_main_txtView_xo"
        android:textColor="#1DBA23"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_txtView_currentPlayer"
        app:layout_constraintStart_toEndOf="@+id/activity_main_txtView_currentPlayer"
        app:layout_constraintTop_toTopOf="@+id/activity_main_txtView_currentPlayer" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_txtView_xo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/activity_main_img00"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img01"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img02"
                style="@style/column" />

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/activity_main_img10"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img11"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img12"
                style="@style/column" />

        </LinearLayout>

        <View style="@style/horizontalLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/activity_main_img20"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img21"
                style="@style/column" />

            <View style="@style/verticalLine" />

            <ImageView
                android:id="@+id/activity_main_img22"
                style="@style/column" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_txtView_madeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_main_txtView_madeat"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/epita_logo" />

    <Button
        android:id="@+id/activity_main_PlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="reset !"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>